source/sass/global/reboot.scss
*,
*::before,
*::after {
	box-sizing: border-box;
}

html,
body {
	margin: 0;
	padding: 0;
	min-height: 100vh;
}

html {
	font-style: normal;
	font-weight: 400;
	// font-size: 16px;
	font-size: 62.5%; // 1rem = 10px
	line-height: 24px;
	font-family: 'Inter', 'Arial', sans-serif;
	color: var(--color-graphite);
	font-weight: 400;

	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	// оптимизация выравнивания шрифта относительно центра строки
}

body {
	width: 100%;
	height: 100%;
	background-color: var(--color-white);
	font-size: 1.4rem;
}

a {
	color: var(--color-graphite);
	text-decoration: none;
}

ul,
ol {
	list-style: none;
	padding: 0;
	margin: 0;
}

img,
video {
	display: block;
	max-width: 100%;
	height: auto;
}

textarea {
	resize: none;
}

// chrome autofill background removal
// если на проекте у инпутов используются разные цвета фонов\текста -
// удалите это из глобала и используйте локально с нужными цветами
// rgba не подойдет, сконвертируйте цвет в hex без прозрачности
// если в стилях уже используется box-shadow есть другое решение -
// задать к списку транзишенов `background-color 10000000s ease-out`
input:-webkit-autofill {
	box-shadow: inset 0 0 0 100rem var(--color-white);
	-webkit-text-fill-color: var(--color-graphite);
}

// firefox placeholder \ invalid fix + ios bdrs
input,
textarea {
	border-radius: 0;

	&::placeholder {
		opacity: 1;
	}

	&:invalid {
		box-shadow: none;
	}
}

select {
	border-radius: 0;
}

// ie11 X removal
input {
	&::-ms-clear,
	&::-ms-reveal {
		display: none;
	}
}

// chrome search X removal
input[type='search']::-webkit-search-decoration,
input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-results-button,
input[type='search']::-webkit-search-results-decoration {
	appearance: none;
}

// input[number] arrows removal
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	margin: 0;

	appearance: none;
}

input[type='number'] {
	appearance: textfield;
}

// ios button \ inputs reset
select,
textarea,
input:matches([type='email'], [type='number'], [type='password'], [type='search'], [type='tel'], [type='text'], [type='url']) {
	appearance: none;
}

button,
[type='button'],
[type='reset'],
[type='submit'] {
	appearance: none;
	background-color: var(--color-transparent);
	border: none;
}

h1 {
	margin-bottom: 4.4rem;
	margin-top: 0;
	font-size: 3rem;
	line-height: 1;

	@include vp-768 {
		margin-bottom: 2.8rem;
		font-size: 2rem;
		line-height: 2.4rem;
	}
}

h2 {
	margin: 0;
}

p {
	margin: 0;
}

section + section {
	margin-top: 4.8rem;

	@include vp-1024 {
		margin-top: 3.2rem;
	}
}

